[tool.poetry]
name = "reef-hubstaff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ipdb = "^0.13.13"
ipython = "^8.21.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
